# Multi-Sensor-Fusion-for-Exoplanetary-Exploration

install/catchall_interfaces/share/catchall_interfaces/: package.ps1  package.sh  package.zsh
install/catchall_interfaces/share/catchall_interfaces/cmake/: catchall_interfaces__rosidl_typesupport_cExport-noconfig.cmake  catchall_interfaces__rosidl_typesupport_introspection_cExport.cmake  export_catchall_interfaces__rosidl_generator_pyExport.cmake  export_catchall_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  (+1 more)
install/catchall_py_pkg/lib/catchall_py_pkg/: turtle_controller
install/catchall_py_pkg/share/catchall_py_pkg/: package.bash  package.zsh
install/my_py_pkg/lib/my_py_pkg/: first_node_installed
install/my_py_pkg/share/my_py_pkg/: package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh
install/my_robot_interfaces/share/my_robot_interfaces/: package.sh
install/sensor_preprocessing/lib/sensor_preprocessing/: camera_preprocessing  imu_preprocessing  lidar_preprocessing  odom_preprocessing
install/sensor_preprocessing/share/sensor_preprocessing/: package.dsv  package.zsh
ros2_ws/: frames_2024-12-04_22.37.54.gv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_py_pkg/share/my_py_pkg/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/catchall_py_pkg/: package.xml  setup.py
ros2_ws/src/my_py_pkg/my_py_pkg/: add_two_ints_client.py
ros2_ws/src/my_robot_bringup/launch/: turtle_catcher.launch.py
ros2_ws/src/sensor_preprocessing/: setup.py
ros2_ws/src/sensor_preprocessing/launch/: ekf_launch.py
ros2_ws/src/sensor_preprocessing/sensor_preprocessing/: camera_preprocessing.py
src/Beacons/: anchor.py  tag.py
src/catchall_interfaces/: CMakeLists.txt
src/catchall_py_pkg/: setup.cfg
src/catchall_py_pkg/catchall_py_pkg/: turtle_controller.py
src/my_py_pkg/: setup.py
src/my_py_pkg/my_py_pkg/install/: local_setup.sh
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/launch/: first_launch_file.launch.py
src/my_robot_interfaces/: CMakeLists.txt
src/sensor_preprocessing/: package.xml  setup.cfg
src/sensor_preprocessing/config/: ekf.yaml
src/sensor_preprocessing/launch/: turtlebot3_slam_launch.py
src/sensor_preprocessing/sensor_preprocessing/: imu_preprocessing.py
(+64 files in other folders)
